policies/templates/gcp_sql_world_readable_v1.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-sql-world-readable-constraint-v1
spec:
  crd:
    spec:
      names:
        kind: GCPSQLWorldReadableConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
   validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/sql_world_readable.rego")
            #
            # Copyright 2018 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #

            package templates.gcp.GCPSQLWorldReadableConstraintV1

            import data.validator.gcp.lib as lib

            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	lib.get_constraint_params(constraint, params)

            	asset := input.asset
            	asset.asset_type == "sqladmin.googleapis.com/Instance"

            	networks := lib.get_default(asset.resource.data.settings.ipConfiguration, "authorizedNetworks", [])
            	network := networks[_]
            	network.value == "0.0.0.0/0"

            	message := sprintf("%v is world readable", [asset.name])
            	metadata := {"resource": asset.name}
            }
            #ENDINLINE
